[metadata]
name = ptero_petri
version = 0.0.1
summary = REST Petri net service
description-file =
    README.md

[files]
packages =
    ptero_petri

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    petri-dot = ptero_petri.implementation.visualize:main
    petri-orchestrator = ptero_petri.implementation.orchestrator.main:main
ptero.services =
    orchestrator = ptero_petri.implementation.orchestrator.service_interface:OrchestratorServiceInterface
