[metadata]
name = ptero_petri
version = 0.0.1
summary = REST Petri net service
description-file =
    README.md

[files]
packages =
    ptero_petri
resources =
    apis/v1/schemas/ *.json = v1_schemas

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    petri-dot = ptero_petri.implementation.visualize:main
